# algae

./: .gitignore  Makefile.am  algae.cc  configure.ac
libalgae/: algae.h  binding-c.cc  colour.cc  colour.h  display.cc  display.h  frame.cc  group.cc  group.h  stats.cc  stats.h  viewer.cc
